devel
-----

* renamed attribute key `openssl-version` in server/client tool version
  details output to `openssl-version-compile-time`.

  This change affects the output produced when starting one of the ArangoDB
  executables with the `--version` command. It also changes the attribute
  name in the detailed response of the `/_api/version` REST API.

* internal issue #2276: fixed the sorting of the databases in the database 
  selection dropdown in the web ui. The sort order differed based on whether
  authentication was enabled or disabled.

* fixed internal issuel #3546: improved the shards view in the web ui if there
  is only one shard to display.

* fixed internal issue #3789: restricted the allowed query names for user
  defined custom queries within the web ui.
  
* upgraded bundled RocksDB version to 6.0

* added "--log.ids" option to arangod

  The default value for this option is `true`. Setting the option to `false`
  will prevent embedding unique log ids into all log messages generated by
  ArangoDB C++ code. The unique ids allow for easy access to the location in
  the source code from which a message originates. This should help customers
  to configure custom monitoring/alerting based on specific log id occurrences
  and will also be helpful for support and development in identifying problems.

* fixed issue #8294: wrong equals behaviour on arrays with ArangoSearch

* fixed internal issue #528: ArangoSearch range query sometimes doesn't work
  correctly with numeric values

* changed type of the startup option `--rocksdb.recycle-log-file-num` from 
  numeric to boolean, as this is also the type the options has in the RocksDB
  library.

* renamed hidden startup option `--rocksdb.delayed_write_rate` to the more
  consistent `--rocksdb.delayed-write-rate`. When the old option name is
  used, the arangod startup will be aborted with a descriptive error message.

* if not explicitly configured, make agency nodes start removing their unused 